# factorio-planner

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: tutorial.ipynb
examples/: basic_example.py  custom_recipes.py  graph_example.py  rocket_launch.py  science_packs.py
factorio_planner/: __init__.py  calculator.py  cli.py  export.py  formatter.py  graph.py  models.py  recipe_db.py  recipes.py  solver.py
factorio_planner/data/: recipes.json
tests/: test_calculator.py
